--- a/index.html
+++ b/index.html
@@ -1785,8 +1785,10 @@
     </div>
 
     <div class="f">
-      Made by Walid And some AI help (do not judge me) - Enhanced UI by Expert
-      AI
+      Made by Walid - Enhanced UI by Expert AI
+try this
+↑ ↑ ↓ ↓ ← → ← → B A
+
     </div>
 
     <script>
