--- a/index.html
+++ b/index.html
@@ -1785,9 +1785,7 @@
     </div>
 
     <div class="f">
-      Made by Walid - Enhanced UI by Expert AI
-try this
-↑ ↑ ↓ ↓ ← → ← → B A
+      Made by Walid - Enhanced UI by Expert AI       try this ↑ ↑ ↓ ↓ ← → ← → B A
 
     </div>
 
