--- a/index.html
+++ b/index.html
@@ -1919,7 +1919,8 @@
           background: var(--bg-interactive);
       }
       /* --- End Toast Notification --- */
-
+      
+      /* --- MOBILE & RESPONSIVE STYLES --- */
       @media (max-width: 768px) {
         body { padding: 1rem 0.75rem; }
         .app-header { flex-direction: column; gap: 1rem; padding: 1rem; top: 0.75rem; }
@@ -1950,7 +1951,7 @@
         .c-g, .m-g { flex-direction: column; gap: 0.5rem; padding: 0.5rem 0; }
         button { padding: 0.8rem 1.5rem; font-size: 0.9rem; letter-spacing: 0.03em; }
         #f-a, #t-f-a, #s2-f-a { font-size: 2rem; }
-        .animated-bg span:nth-child(n + 8) { display: none; } /* Show fewer, now up to 7 shown */
+        .animated-bg span:nth-child(n + 8) { display: none; } /* Show fewer spans for performance */
         .missing-module-item { padding: 1rem !important; margin-bottom: 1rem !important; }
         .missing-module-item > div.input-grade-group { flex-direction: column; align-items: flex-start; gap: 0.25rem; }
         .missing-module-item > div.input-grade-group label { text-align: left; min-width: auto; }
@@ -1960,7 +1961,7 @@
         .weight-input-group input[type="number"].component-weight-input { width: 100%; }
         .calc-tooltiptext { left: 5%; transform: translateX(0); width: 90%; }
         .calc-tooltiptext::after { left: 10%; }
-        .modal-content { padding: 1.5rem; } /* Adjust modal padding */
+        .modal-content { padding: 1.5rem; }
         .modal-content h2 { font-size: 1.6rem; }
         .guide-section ul li { font-size: 0.9rem; padding-left: 1.6em; }
 
@@ -1991,9 +1992,9 @@
         .c-g > div, .m-g > div { min-width: 100%; }
         button { padding: 0.7rem 1.2rem; font-size: 0.85rem; }
         #f-a, #t-f-a, #s2-f-a { font-size: 1.75rem; }
-        .animated-bg span:nth-child(n + 6) { display: none; } /* Even fewer, now up to 5 shown */
+        .animated-bg span:nth-child(n + 6) { display: none; } /* Even fewer spans */
         .missing-module-item { padding: 0.75rem !important; margin-bottom: 0.75rem !important; }
-        .modal-content { padding: 1rem; } /* Adjust modal padding */
+        .modal-content { padding: 1rem; }
         .modal-content h2 { font-size: 1.4rem; }
         .modal-content p { font-size: 0.95rem; margin-bottom: 1rem;}
         .modal-actions button { font-size: 0.8rem; padding: 0.6rem 1rem; }
