--- a/index.html
+++ b/index.html
@@ -970,8 +970,7 @@
 			}
 			.c-g > div label,
 			.m-g > div label {
-				min-width: 80px;
-				text-align: right;
+				text-align: left;
 				color: var(--text-secondary);
 				font-weight: 500;
 				font-size: 0.9rem;
@@ -990,6 +989,7 @@
 				color: var(--text-secondary);
 				font-weight: 500;
 				transition: color var(--duration-normal) var(--timing-state-change);
+				cursor: pointer;
 			}
 			.t-m span {
 				flex-shrink: 0;
@@ -998,8 +998,8 @@
 				-webkit-appearance: none;
 				-moz-appearance: none;
 				appearance: none;
-				width: 42px;
-				height: 24px;
+				width: 50px;
+				height: 26px;
 				background: var(--bg-interactive-strong);
 				border-radius: var(--border-radius-xl);
 				position: relative;
@@ -1013,8 +1013,8 @@
 			.t-m input[type="checkbox"]::before {
 				content: "";
 				position: absolute;
-				width: 18px;
-				height: 18px;
+				width: 20px;
+				height: 20px;
 				border-radius: 50%;
 				background: #fff;
 				top: 3px;
@@ -1026,7 +1026,7 @@
 				background: var(--accent-success);
 			}
 			.t-m input[type="checkbox"]:checked::before {
-				transform: translateX(18px);
+				transform: translateX(24px);
 			}
 			.t-m label {
 				display: none;
@@ -1102,6 +1102,11 @@
 				transform: rotate(25deg) translateX(120%);
 				transition: transform var(--duration-slower) var(--ease-out-quint);
 			}
+			#s1-calc,
+			#s2-calc {
+				margin-top: 2rem;
+				width: 100%;
+			}
 			#a-b {
 				background: linear-gradient(65deg, var(--s), var(--p));
 				font-size: 0.85rem;
@@ -1127,7 +1132,11 @@
 				align-self: flex-end;
 			}
 			.r-b {
-				background-color: var(--bg-tertiary);
+				background-image: linear-gradient(
+					145deg,
+					var(--bg-secondary),
+					var(--bg-tertiary)
+				);
 				border-radius: var(--border-radius-xl);
 				padding: 2rem;
 				margin-top: 2rem;
@@ -1135,7 +1144,7 @@
 				text-align: center;
 				position: relative;
 				z-index: 1;
-				border: 1px solid var(--border-primary);
+				border: 2px solid var(--border-primary);
 				transition: background-color var(--duration-normal)
 						var(--timing-state-change),
 					border-color var(--duration-normal) var(--timing-state-change);
@@ -1143,7 +1152,8 @@
 			.r-b h3 {
 				color: var(--text-secondary);
 				margin-bottom: 0.75rem;
-				font-size: 1.4rem;
+				font-size: 1.1rem;
+				font-weight: 500;
 			}
 			#f-a,
 			#t-f-a,
@@ -2299,11 +2309,9 @@
 					<div id="s1-modules" class="content-card">
 						<div class="collapsible-content-wrapper"></div>
 					</div>
-					<div style="text-align: center; margin: 1.5rem 0">
-						<button id="s1-calc" class="primary-action" onclick="cA()">
-							Calc S1 Avg
-						</button>
-					</div>
+					<button id="s1-calc" class="primary-action" onclick="cA()">
+						Calc S1 Avg
+					</button>
 					<div class="r-b" id="s1-result">
 						<h3>S1 Avg: <span id="f-a">0.00</span></h3>
 					</div>
@@ -2312,11 +2320,9 @@
 					<div id="s2-modules" class="content-card">
 						<div class="collapsible-content-wrapper"></div>
 					</div>
-					<div style="text-align: center; margin: 1.5rem 0">
-						<button id="s2-calc" class="primary-action" onclick="cA_S2()">
-							Calc S2 Avg
-						</button>
-					</div>
+					<button id="s2-calc" class="primary-action" onclick="cA_S2()">
+						Calc S2 Avg
+					</button>
 					<div class="r-b" id="s2-result">
 						<h3>S2 Avg: <span id="s2-f-a">0.00</span></h3>
 					</div>
@@ -2336,32 +2342,32 @@
 									Use S2 Modules</label
 								>
 							</div>
-							<div style="margin-bottom: 1rem">
-								<label
-									for="t-a"
-									style="
-										display: block;
-										margin-bottom: 0.5rem;
-										font-weight: 600;
-									"
-									>Enter Talents Avg:</label
-								><input
-									type="number"
-									id="t-a"
-									min="0"
-									max="20"
-									step="0.5"
-									style="width: 100%; max-width: 200px"
-									oninput="cM()" />
-							</div>
 							<div
 								style="
-									margin-bottom: 1rem;
 									display: flex;
 									flex-wrap: wrap;
-									gap: 1rem;
 									align-items: flex-end;
+									gap: 1rem;
+									margin-bottom: 1rem;
 								">
+								<div>
+									<label
+										for="t-a"
+										style="
+											display: block;
+											margin-bottom: 0.5rem;
+											font-weight: 600;
+										"
+										>Enter Talents Avg:</label
+									><input
+										type="number"
+										id="t-a"
+										min="0"
+										max="20"
+										step="0.5"
+										style="width: 100%; max-width: 200px"
+										oninput="cM()" />
+								</div>
 								<div>
 									<label
 										for="m-m"
@@ -3454,7 +3460,6 @@
 				const toggleId = isS2Module
 					? `s2-t-m-${moduleCodeLower}`
 					: `t-m-${moduleCodeLower}`;
-				const toggleFunction = `toggleModuleManualMode('${moduleCodeLower}', ${isS2Module})`;
 
 				let gradesInputsHTML = moduleData.fields
 					.map((fieldLabel, idx) => {
@@ -3477,13 +3482,24 @@
             <h4>${moduleCode} <span>(coef ${moduleData.coef})</span>
                 <button class="toggle-weights-btn" title="Customize Weights" aria-label="Customize weights for ${moduleCode}" data-module="${moduleCode}" data-type="regular">⚙️</button>
             </h4>
-            <div class="t-m"> <input type="checkbox" id="${toggleId}" onchange="${toggleFunction}" /><span id="${toggleId}-label">Manual Avg Entry</span> </div>
+            <label class="t-m">
+				<input type="checkbox" id="${toggleId}" />
+				<span>Manual Avg Entry</span>
+			</label>
             <div class="c-g">${gradesInputsHTML}</div>
             <div class="m-g" style="display:none;"><div><label>Module Avg:</label><input type="number" class="grade-input" min="0" max="20" step="0.5" placeholder="Enter avg" oninput="${
 							isS2Module ? "cA_S2()" : "cA()"
 						}"></div></div>
             ${generateWeightsPanelHTML(moduleData, false)}
             <div class="module-average"> Average: <strong id="${avgId}">0.00</strong><span class="calc-tooltip-icon" tabindex="0" aria-label="Show calculation details for ${moduleCode}">ⓘ<span class="calc-tooltiptext">Details here.</span></span></div>`;
+
+				const toggleCheckbox = moduleItem.querySelector(`#${toggleId}`);
+				if (toggleCheckbox) {
+					toggleCheckbox.addEventListener("change", () =>
+						toggleModuleManualMode(moduleCodeLower, isS2Module)
+					);
+				}
+
 				addWeightsEventListeners(moduleItem, moduleCode, false, isS2Module);
 				return moduleItem;
 			}
@@ -3553,6 +3569,10 @@
 				mC2.forEach((module) =>
 					s2ModulesContainer.appendChild(generateModuleHTML(module, true))
 				);
+
+				// Move primary action buttons
+				s1ModulesContainer.appendChild(document.getElementById("s1-calc"));
+				s2ModulesContainer.appendChild(document.getElementById("s2-calc"));
 
 				// --- TAB LOGIC ---
 				document.querySelectorAll(".tab-btn").forEach((btn) => {
@@ -3704,11 +3724,11 @@
 				resetButton.textContent = "Reset All Inputs & Weights";
 				resetButton.className = "primary-action"; // Use existing button class
 				resetButton.style.cssText =
-					"display: block; margin: 2rem auto; background: var(--accent-warning); max-width: 300px;";
+					"display: block; margin: 2rem auto; background: var(--accent-danger); width: auto;";
 				resetButton.onclick = resetCalculator;
-				const footerElement = document.querySelector(".f");
-				if (footerElement) {
-					footerElement.parentNode.insertBefore(resetButton, footerElement);
+				const tabsContainer = document.querySelector("main.tabs-container");
+				if (tabsContainer) {
+					tabsContainer.appendChild(resetButton);
 				} else {
 					document.body.appendChild(resetButton);
 				}
